feat(bindings): publish JVM binding to Maven Central and settle JDK baseline (#616)
- Stage multi-arch native libraries (linux-x86_64, linux-aarch64, darwin-aarch64, darwin-x86_64, windows-x86_64) into JVM JAR resources
- Add package-maven release job in release.yml with Central Publishing deployment and GitHub Release attachment
- Add pack-java package verification job in ci.yml and register in ci-gate rollup
- Add Maven Central probe to scripts/verify_release_registries.py and wire self-test into gate.sh
- Settle JDK baseline as Java 22+ (finalized Project Panama FFM - JEP 454), document Java 21 LTS preview recipe, and publish platform matrix across docs